[TEST] better fix for ambiguous types in tests